--- a/index.org
+++ b/index.org
@@ -74,8 +74,8 @@ private, but my projects can be viewed on GitHub Pages.
 # - *[[jirassimok:04-Remix][Remix]]:* An extension on the visualizations found
 #   [[https://qz.com/582720/americas-most-prolific-wall-punchers-charted/][here]],
 #   designed to allow users to explore the data. The visualizations
-- *A Classic Experiment* ([[jirassimok:03-Experiment][experiment]],
-  [[https://github.com/jirassimok/03-Experiment/blob/3bfcb9581724845935160894d3247760d9f464be/README.md][report]]):
+- *A Classic Experiment* ([[jirassimok:03-Experiment/gh/quiz.html][experiment]],
+  [[jirassimok:03-Experiment][report]]):
   A variation on [[doi:10.2307/2288400][this visualization experiment]],
   influenced by [[doi:10.1111/cgf.12888][this study]]. This experiment aimed to
   use the experiment's technique to study how data is percieved in variations on
